--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Articles</title>
+		<title>Статейная</title>
 	</head>
 	<body>
 		<div id="app"></div>
